--- a/src/components/text.module.css
+++ b/src/components/text.module.css
@@ -1,51 +1,61 @@
 .box{
-    padding-left:10vw;
+    
     font-size: 40px;
-    background-color: antiquewhite;
+ 
     color: white;
+    font-weight: 600;
+    line-height: 40px;
     
 }
-.box1{
+.bg{
+    height: 80vh;
+    background-size: cover; 
+    background-repeat: no-repeat;
+    padding: 80px 100px;
     
-    font-size: 20px;
-    margin: 20px ;
+
+    background-image: url('../../image.jpg');
+}
+.box1{
+    color: white;
+    font-size: 18px;
+    font-weight: 600;
     width: 50vw;
-    text-align: center;
+    margin-top: 20px;
+    
+    
+    
 
 }
 .bt{
-    padding-left:6vw ;
+    width: 40vw;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
 }
 
 
-
+.box2 , .box3 , .box4 , .box5{
+    font-size: 15px;
+    padding: 10px 8px ;
+    border-radius: 5px;
+    border: none;
+    display: flex;
+    align-items: center;
+}
 
 
 .box2{
-    background-color: grey;
+    background-color: rgb(70, 68, 68);
     color: white;
-    font-size: 15px;
-    padding: 15px ,15px;
-    border: none;
-    margin: 15px;
 
 }
 .box3,.box4{
     background-color: white;
     color: black;
-    font-size: 15px;
-    padding: 20px ,20px;
-    border-radius: 5px;
-    margin: 15px;
-    
-
 }
 
 .box5{
     background-color: black;
     color: white;
-    font-size: 15px;
-    margin: 15px;
-    border-radius: 5px;
-
 }
