--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -1,5 +1,5 @@
 .nave{
-    background-color: gainsboro;
+    background-color: black;
     display: flex;
     justify-content:space-between ;
     padding: 15px 15px ;
